--- a/wp-content/themes/Oceanworldtheme/assets/css/style.css
+++ b/wp-content/themes/Oceanworldtheme/assets/css/style.css
@@ -324,14 +324,25 @@ padding-bottom: 2rem;
     position: absolute;
     left: 57rem;
     top: -11rem;
-    rotate: -26deg;
+    animation-duration: 30s;
+    animation-iteration-count: infinite;
+    animation-name: antiClockwiseSpin;
+    animation-timing-function: linear;
 }
-
+@keyframes antiClockwiseSpin {
+    from  {
+      transform: rotate(360deg);
+   }
+   to {
+      transform: rotate(0deg);
+    }	
+ }
 
 .image3 {
     position: absolute;
     bottom: -19rem;
     left: 67rem;
+    animation: floating 10s ease infinite;
 }
 
 
@@ -502,6 +513,7 @@ padding-bottom: 2rem;
     bottom: -305px;
     left: 84px;
     width: 36%;
+    animation: floating 10s ease infinite;
 }
 .gallery-part , .gallery-part .row {
     margin-left: -5px !important;
@@ -605,13 +617,47 @@ padding-bottom: 2rem;
     top: -182px;
     -webkit-transform: scaleX(-1);
     transform: scaleX(-1);
+    animation-duration: 30s;
+    animation-iteration-count: infinite;
+    animation-name: antiClockwiseSpin;
+    animation-timing-function: linear;
+}
+@-ms-keyframes spin { 
+    from { 
+        -ms-transform: rotate(0deg); 
+    } to { 
+        -ms-transform: rotate(360deg); 
+    }
+}
+@-moz-keyframes spin { 
+    from { 
+        -moz-transform: rotate(0deg); 
+    } to { 
+        -moz-transform: rotate(360deg); 
+    }
+}
+@-webkit-keyframes spin { 
+    from { 
+        -webkit-transform: rotate(0deg); 
+    } to { 
+        -webkit-transform: rotate(360deg); 
+    }
+}
+@keyframes spin { 
+    from { 
+        transform: rotate(0deg); 
+    } to { 
+        transform: rotate(360deg); 
+    }
 }
 .element2 {
     position: absolute;
     left: 0;
     bottom: -160px;
     width: 100%;
+    animation: floating 10s ease infinite;
 }
+
 
 .posts .swiper-slide {
     z-index: 1;
@@ -767,6 +813,7 @@ footer p {margin:40px 0;}
     left: 5%;
     bottom: 0;
     width:300px;
+    animation: floating 10s ease infinite;
 }
 .elemement5 {
     position: absolute;
@@ -774,6 +821,10 @@ footer p {margin:40px 0;}
     bottom: 5%;
     width: 380px;
     z-index: -1;
+    animation-duration: 30s;
+    animation-iteration-count: infinite;
+    animation-name: antiClockwiseSpin;
+    animation-timing-function: linear;
 }
 .elemement3 {
     position: absolute;
@@ -781,6 +832,7 @@ footer p {margin:40px 0;}
     top: 18%;
     width: 450px;
     z-index: -1;
+    animation: floating 10s ease infinite;
 }
 .innerbanner .banner-text h1 {
     font-size: 3rem;
@@ -1878,7 +1930,7 @@ button.woocommerce-Button , .woocommerce-address-fields .button , .wc-block-comp
     border: 2px solid #dddddd;
     border-radius: 0px;
     width: 100%;
-    height: 90px;
+    height: 120px;
     object-fit: contain;
     padding: 10px;
     background: #fff;
@@ -1909,4 +1961,10 @@ button.woocommerce-Button , .woocommerce-address-fields .button , .wc-block-comp
     max-width: 100%;
     height: 450px !important;
     object-fit: contain !important;
+}
+.wcgs-carousel .wcgs-slider-image {
+    width: 100%; overflow: visible !important;
+}
+.photo {
+    background-size: auto 100% !important;
 }
